# as5047p

./: .gdbinit  Cargo.toml  README.md
examples/: bluepill.rs  f4-disco.rs
src/: lib.rs  registers.rs
