[package]
name = "as5047p"
version = "0.1.0"
authors = ["Ferdia McKeogh <ferdia@mckeogh.tech>"]
edition = "2018"

[dependencies]
embedded-hal = "0.2.2"
byteorder = { version = "1.3.1", default-features = false }

[dev-dependencies]
stm32f1xx-hal = { git = "https://github.com/stm32-rs/stm32f1xx-hal.git", features = ["rt", "stm32f103"] }
cortex-m-rt = "0.6.7"
cortex-m-semihosting = "0.3.2"
panic-semihosting = "0.5.1"
cortex-m = "0.5.8"
